# pain

./: .gitattributes  .gitignore  Main.sublime-menu  Pain.py  Pain.sublime-commands  Pain.sublime-settings  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: conftest.py  test_boundaries.py  test_commands.py  test_equalize.py  test_layout.py  test_point_index.py  test_resize_integration.py  test_sign.py  test_validation.py
