[project]
name = "Pain"
version = "0.1.0"
description = "No pain to resize panes. Sublime Text plugin for keyboard-driven pane resizing."
requires-python = ">=3.8"

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.lint]
select = [
    "E", "W",     # pycodestyle
    "F",           # pyflakes
    "I",           # isort
    "N",           # pep8-naming
    "D",           # pydocstyle
    "UP",          # pyupgrade
    "B",           # flake8-bugbear
    "SIM",         # flake8-simplify
    "RUF",         # ruff-specific
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # no docstrings required in tests

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
reportMissingImports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
